--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,7 +18,7 @@
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-
+<!--
   <div fxFlex *ngIf="selectedDish">
     <mat-card>
       <mat-card-header>
@@ -36,6 +36,7 @@
         <button mat-button>SHARE</button>
       </mat-card-actions>
     </mat-card>
-  </div>
+  </div>-->
+
 
 </div>
