--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,46 +1,3 @@
-<!--<div class="container"
-     fxLayout="row"
-     fxLayout.sm="column"
-     fxLayout.xs="column"
-     fxLayoutAlign.gt-md="space-around center"
-     fxLayoutGap="10px"
-     fxLayoutGap.xs="0">
-
-  <div fxFlex="40">
-    <div *ngIf="dish">
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>
-            <h3>{{dish.name | uppercase}}</h3>
-          </mat-card-title>
-        </mat-card-header>
-        <img mat-card-image src={{dish.image}} alt={{dish.name}}>
-        <mat-card-content>
-          <p>{{dish.description}}</p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-  </div>
-
-  <div fxFlex="40">
-    <div  *ngIf="dish">
-      <mat-grid-list cols="1" rowHeight="200px">
-        <h3>Comments</h3>
-        <mat-grid-tile  *ngFor="let comment of dish.comments">
-          <div class="mat-grid-left">
-            {{comment.comment}}<br>
-            {{comment.rating}} Stars<br>
-            &#45;&#45; {{comment.author}} {{comment.date | date}}<br>
-          </div>
-        </mat-grid-tile>
-      </mat-grid-list>
-    </div>
-  </div>
-</div>-->
 <div class="container"
      fxLayout="row"
      fxLayout.sm="column"
@@ -70,14 +27,16 @@
   </div>
 
   <div fxFlex="40">
-    <mat-grid-list cols="1" rowHeight="150px">
+    <div *ngIf="dish">
       <h3>Comments</h3>
-      <mat-grid-tile *ngFor="let com of dish.comments">
-        {{com.comment}}<br>
-        {{com.rating}} Stars<br>
-        {{com.author}} {{com.date | date}}
-      </mat-grid-tile>
-    </mat-grid-list>
+      <mat-list *ngFor="let com of dish.comments">
+        <mat-list-item>
+          <p matLine>{{com.comment}}</p>
+          <p matLine>{{com.rating}} Stars</p>
+          <p matLine>-- {{com.author}} {{com.date | date}}</p>
+        </mat-list-item>
+      </mat-list>
+    </div>
   </div>
 
 </div>
