--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,6 +18,8 @@
       </mat-grid-tile>
     </mat-grid-list>
   </div>
+
+  <app-dishdetail></app-dishdetail>
 <!--
   <div fxFlex *ngIf="selectedDish">
     <mat-card>
