--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -67,5 +67,8 @@
           {{leader.description}}
         </div>
       </mat-list>
-  </div>
+    </div>
+    <div [hidden]="leaders">
+      <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
 </div>
