--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -25,6 +25,9 @@
         </mat-card-actions>
       </mat-card>
     </div>
+    <div [hidden]="dish">
+      <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
   </div>
 
   <div fxFlex="40">
@@ -37,6 +40,9 @@
           <p matLine>-- {{com.author}} {{com.date | date}}</p>
         </mat-list-item>
       </mat-list>
+    </div>
+    <div [hidden]="dish">
+      <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
     </div>
   </div>
 
