--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -2,7 +2,7 @@
      fxLayout="row"
      fxLayout.sm="column"
      fxLayout.xs="column"
-     fxLayoutAlign.gt-md="space-around center"
+     fxLayoutAlign.gt-md="space-around"
      fxLayoutGap="10px"
      fxLayoutGap.xs="0">
 
@@ -42,10 +42,38 @@
           <p matLine>-- {{com.author}} {{com.date | date}}</p>
         </mat-list-item>
       </mat-list>
+      <mat-list>
+        <mat-list-item *ngIf="commentForm.status == 'VALID' && commentForm.touched && commentForm.dirty">
+          <p matLine>{{commentForm.value.comment}}</p>
+          <p matLine>{{matslider.value}} Stars</p>
+          <p matLine>-- {{commentForm.value.author}}</p>
+        </mat-list-item>
+      </mat-list>
     </div>
-    <div [hidden]="dish">
+    <div *ngIf="!dish">
       <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
     </div>
+
+    <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="full-width">
+          <input matInput formControlName="author" placeholder="Name" type="text" required>
+          <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+        </mat-form-field>
+      </p>
+      <p>
+        <input formControlName="rating" placeholder="Rating" type="hidden" required>
+        <mat-slider min=1 max=5 step=1 value=5 thumbLabel tickInterval=1 #matslider></mat-slider>
+        <mat-error *ngIf="formErrors.rating">{{formErrors.rating}}</mat-error>
+      </p>
+      <p>
+        <mat-form-field class="full-width">
+          <textarea matInput matTextareaAutosize cdkAutosizeMinRows="10" formControlName="comment" placeholder="Your Comment" type="text" required></textarea>
+          <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+        </mat-form-field>
+      </p>
+      <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
+    </form>
   </div>
 
 </div>
