--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,8 +18,12 @@
       </p>
     </mat-card-content>
   </mat-card>
-  <div [hidden]="dish">
+  <div [hidden]="dish || errMess">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
   </div>
 
   <mat-card *ngIf="promotion" fxFlex>
@@ -29,7 +33,7 @@
         <h3>{{promotion.name | uppercase}}</h3>
       </mat-card-title>
     </mat-card-header>
-    <img mat-card-image src={{ BaseURL + promotion.image}} alt={{promotion.name}}>
+    <img mat-card-image src={{promotion.image}} alt={{promotion.name}}>
     <mat-card-content>
       <p>{{promotion.description}}
       </p>
@@ -46,7 +50,7 @@
         <h3>{{leader.name | uppercase}} {{leader.abbr}}</h3>
       </mat-card-title>
     </mat-card-header>
-    <img mat-card-image src={{ BaseURL + leader.image}} alt={{leader.name}}>
+    <img mat-card-image src={{leader.image}} alt={{leader.name}}>
     <mat-card-content>
       <p matLine>{{leader.designation}}</p>
       <p>{{leader.description}}</p>
