--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -7,7 +7,7 @@
      fxLayoutGap.xs="0">
 
   <div fxFlex="40">
-    <div *ngIf="dish" [@visibility]="visibility">
+    <div *ngIf="dish" [@visibility]="visibility" [@expand]>
       <mat-card>
         <mat-card-header>
           <mat-card-title>
@@ -33,7 +33,7 @@
   </div>
 
   <div fxFlex="40">
-    <div *ngIf="dish" [@visibility]="visibility">
+    <div *ngIf="dish" [@visibility]="visibility" [@expand]>
       <h3>Comments</h3>
       <mat-list *ngFor="let com of dish.comments">
         <mat-list-item>
