--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -92,8 +92,8 @@
     </form>
   </div>
   <div fxFlex [hidden]="!isSubmitted">
-    <h3>Submitting Form</h3>
-    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    <h4>Submitting Form</h4>
+    <mat-spinner></mat-spinner>
   </div>
   <div fxFlex [hidden]="feedback == null || errMess == null">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
